fix layout issue

--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -1,4 +1,5 @@
 .comments {
+  margin: 50px 0 50px 0;
   .face img {
     width: 48px;
     height: 48px;
@@ -36,4 +37,8 @@
     top: 10px;
     right: 10px;
   }
+}
+
+.summary {
+  margin-top: 50px;
 }
